--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,19 @@ footer a:hover {
   line-height: 1.5;
   color:#007bff
 }
-
+.post-content h2 {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color:#007bff
+}
+.post-content h3,h4,h5,h6 {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  color:#0055ff
+}
+.post-content ul,li{
+  color:#333;
+}
 .post-meta {
   font-size: 0.9rem;
   color: #555;
@@ -126,4 +138,7 @@ footer a:hover {
 .readmore{
   color:#007bff;
   text-decoration:none;
+}
+.post-image2{
+  width:60%;
 }
